Fix HTML Errorable wrapping

--- a/app/assets/stylesheets/components/modules.scss
+++ b/app/assets/stylesheets/components/modules.scss
@@ -73,4 +73,8 @@ $icon-size: 50px;
       }
     }
   }
+
+  .mosaic {
+    margin-top: 2em;
+  }
 }
